--- a/po/sl.po
+++ b/po/sl.po
@@ -8,10 +8,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-video-arcade master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=\n"
-"POT-Creation-Date: 2010-05-16 22:14+0000\n"
-"PO-Revision-Date: 2010-07-19 14:39+0100\n"
-"Last-Translator: Matej Urbančič <mateju@svn.gnome.org>\n"
+"POT-Creation-Date: 2011-03-05 10:38+0000\n"
+"PO-Revision-Date: 2011-03-05 17:48+0100\n"
+"Last-Translator: Andrej Žnidaršič <andrej.znidarsic@gmail.com>\n"
 "Language-Team: Slovenian GNOME Translation Team <gnome-si@googlegroups.com>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -94,7 +95,7 @@ msgstr "<b>Zvok</b>"
 #. The same text is in gnome-video-arcade.builder,
 #. * so it has to be translated with markup anyway.
 #: ../data/gnome-video-arcade.builder.h:21
-#: ../src/gva-columns.c:747
+#: ../src/gva-columns.c:750
 msgid "<b>There are known problems with this game:</b>"
 msgstr "<b>Z igro so povezane številne težave:</b>"
 
@@ -232,14 +233,197 @@ msgstr "Tehnično"
 msgid "_Start Game"
 msgstr "_Začni igro"
 
-#: ../src/gconf-bridge.c:1222
-#, c-format
-msgid "GConf error: %s"
-msgstr "Napaka GConf: %s"
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:1
+msgid "All available column names"
+msgstr "Vsa razpoložljiva imena stolpcev"
 
-#: ../src/gconf-bridge.c:1232
-msgid "All further errors shown only on terminal."
-msgstr "Vse nadaljnje napake bodo prikazane le v terminalu."
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:2
+msgid "Auto-play music clip"
+msgstr "Samodejno predvajaj glasbeni posnetek"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:3
+msgid "Column names"
+msgstr "Imena stolpcev"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:4
+msgid "Enable automatic playing of in-game music clips. If true, and a music clip is available for the selected game, the clip will automatically begin playing when the user opens the Properties window or when the user selects a different game while the Properties window is visible. Music clips are streamed from http://www.arcade-history.com/."
+msgstr "Omogoči samodejno predvajanje zvočnih posnetkov v igri. V primeru da je možnost izbrana in je za zagnano igro na voljo glasbeni posnetek, se bo posnetek začel samodejno predvajati, ko uporabnik odpre okno lastnosti ali ko uporabnik izbere drugo igro, medtem ko je okno lastnosti vidno. Posnetki glasbe se pretakajo s http://www.arcade-history.com/."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:5
+msgid "Enable automatic restore at startup and save at exit. If true, the emulator will try to restore the previous state of the arcade machine when starting a game. If false, the emulator will boot the arcade machine from a cold start. This setting does not apply to recording games or playing back previously recorded games. In those cases the emulator will always reboot the arcade machine."
+msgstr "Omogoči samodejno obnavljanje ob zagonu in shrani ob končanju. Izbrana možnost določi, da bo posnemovalnik obnovil prehodno stanje arkadnega stroja pri zagonu igre. V primeru da možnost ni izbrana, bo posnemovalnik arkadni stroj zagnal iz hladnega zagona. Ta nastavitev ni uveljavljena za snemanje iger ali predvajanje predhodno posnetih iger. V teh primer bo posnemovalnik vedno ponovno zagnal arkadni stroj."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:6
+msgid "Favorite games"
+msgstr "Priljubljene igre"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:7
+msgid "If true, automatically switch to full screen mode when starting a game. If false, start the game in a window."
+msgstr "Izbrana možnost določi, da se v celozaslonskem načinu samodejno preklopi v celozaslonski način. V primeru da možnost ni izbrana, se igra zažene v oknu."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:8
+msgid "If true, games are started without sound."
+msgstr "Izbrana možnost določi, da so igre zagnane brez zvoka."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:9
+msgid "If true, show both original and cloned games in the main window. If false, show only original games."
+msgstr "Izbrana možnost določi, da so v glavnem oknu prikazane vse klonirane igre. V primeru da možnost ni izbrana, so prikazane le izvirne igre."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:10
+msgid "List of all available column names. The user may choose to only display a subset of them (see \"columns\")."
+msgstr "Seznam vseh razpoložljivih imen stolpcev. Uporabnik lahko izbere le prikaz njihovega podniza (oglejte si \"stolpce\")."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:11
+msgid "List of column names to display."
+msgstr "Seznam imen stolpcev za prikaz."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:12
+msgid "List of the user's favorite games."
+msgstr "Seznam uporabnikovih priljubljenih iger."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:13
+msgid "Program version"
+msgstr "Različica programa"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:14
+msgid "Properties height"
+msgstr "Višina lastnosti"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:15
+msgid "Properties maximized"
+msgstr "Razpete lastnosti"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:16
+msgid "Properties page"
+msgstr "Stran lastnosti"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:17
+msgid "Properties width"
+msgstr "Širina lastnosti"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:18
+msgid "ROM error filename"
+msgstr "Napaka imena datoteke ROM"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:19
+msgid "Save and restore state"
+msgstr "Shrani in obnovi sejo"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:20
+msgid "Search text"
+msgstr "Poišči besedilo"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:21
+msgid "Selected completion match"
+msgstr "Ujemanje izbranega dopolnjevanja"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:22
+msgid "Selected game"
+msgstr "Izbrana igra"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:23
+msgid "Selected view"
+msgstr "Izbran pogled"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:24
+msgid "Show cloned games"
+msgstr "Pokaži klonirane igre"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:25
+msgid "Sort column and sort order"
+msgstr "Razvrsti stolpec in vrstni red razvrstitve"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:26
+msgid "Sound muted"
+msgstr "Zvok je nem"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:27
+msgid "Start games in full screen mode"
+msgstr "Zaženi igre v celozaslonskem načinu"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:28
+msgid "Suggested filename for the ROM error \"Save As\" dialog."
+msgstr "Predlagano ime datoteke za pogovorno okno napake ROM \"Shrani kot\"."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:29
+msgid "The X coordinate of the main window."
+msgstr "Koordinata X glavnega okna."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:30
+msgid "The Y coordinate of the main window."
+msgstr "Koordinata Y glavnega okna."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:31
+msgid "The first value is the most recently sorted column name (or \"default\" for default sorting), and the second value is the sort order. True indicates descending order; False indicates ascending order."
+msgstr "Prva vrednost je najbolj nedavno razvrščeno ime stolpca (ali \"privzeto\" za privzeto razvrščanje) in druga vrednost je vrsti red razvrščanja. Prav nakaže padajoči vrsti red, napak nakaže naraščajoči vrstni red."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:32
+msgid "The height of the Properties window."
+msgstr "Ustvarjanje okna z lastnostmi."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:33
+msgid "The height of the main window."
+msgstr "Višina glavnega okna."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:34
+msgid "The most recent text in the search entry."
+msgstr "Najbolj nedavno besedilo v vnosu iskanja."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:35
+msgid "The most recently run version of GNOME Video Arcade."
+msgstr "Najbolj nedavno pognana različica GNOME Video Arcade."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:36
+msgid "The most recently selected game."
+msgstr "Najbolj nedavno izbrana igra."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:37
+msgid "The most recently selected match from a search completion list. The first value is the column name of the match, and the second value is the text of the match. Example: (manufacturer, Williams). Empty values indicate the completion feature was not used in the most recent search."
+msgstr "Najbolj nedavno izbrano ujemanja iz seznama dokončanja iskanja. Prva vrednost je ime stolpca ujemanja in druga vrednost je besedilo ujemanja. Primer: (proizvajalec, Novak). Prazne vrednosti nakazujejo, da zmožnost dopolnjevanja ni bila uporabljena v najbolj nedavnem iskanju."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:38
+msgid "The most recently selected page in the Properties window."
+msgstr "Najbolj nedavno izbrana stran v oknu lastnosti."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:39
+msgid "The most recently selected view."
+msgstr "Najbolj nedavno izbran pogled."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:40
+msgid "The width of the Properties window."
+msgstr "Ustvarjanje okna z lastnostmi."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:41
+msgid "The width of the main window."
+msgstr "Širina glavnega okna."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:42
+msgid "True if the Properties window is maximized."
+msgstr "Prav, če je okno lastnosti razpeto."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:43
+msgid "True if the main window is maximized."
+msgstr "Prav, če je glavno okno razpeto."
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:44
+msgid "Window X coordinate"
+msgstr "X koordinata okna"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:45
+msgid "Window Y coordinate"
+msgstr "Y koordinata okna"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:46
+msgid "Window height"
+msgstr "Višina okna"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:47
+msgid "Window maximized"
+msgstr "Razpeto okno"
+
+#: ../data/org.gnome.VideoArcade.gschema.xml.in.h:48
+msgid "Window width"
+msgstr "Širina okna"
 
 #: ../src/gva-audit.c:238
 msgid "Save As"
@@ -273,139 +457,139 @@ msgstr "_Pokaži"
 msgid "_Hide"
 msgstr "_Skrij"
 
-#: ../src/gva-columns.c:298
+#: ../src/gva-columns.c:299
 #, c-format
 msgid "Remove %s Column"
 msgstr "Odstrani stolpec %s"
 
-#: ../src/gva-columns.c:300
+#: ../src/gva-columns.c:301
 #, c-format
 msgid "Remove the \"%s\" column from the game list"
 msgstr "Odstranjevanje stolpca \"%s\" iz seznama iger"
 
 #. The labels begin with a UTF-8 encoded bullet character.
-#: ../src/gva-columns.c:759
+#: ../src/gva-columns.c:762
 #, no-c-format
 msgid "• The colors aren't 100% accurate."
 msgstr "• Barve niso 100% natančne."
 
-#: ../src/gva-columns.c:768
+#: ../src/gva-columns.c:771
 msgid "• The colors are completely wrong."
 msgstr "• Barve so popolnoma napačne."
 
-#: ../src/gva-columns.c:778
+#: ../src/gva-columns.c:781
 #, no-c-format
 msgid "• The video emulation isn't 100% accurate."
 msgstr "• Posnemanje videa ni 100% natančno."
 
-#: ../src/gva-columns.c:788
+#: ../src/gva-columns.c:791
 #, no-c-format
 msgid "• The sound emulation isn't 100% accurate."
 msgstr "• Posnemanje zvoka ni 100% natančno."
 
-#: ../src/gva-columns.c:797
+#: ../src/gva-columns.c:800
 msgid "• The game lacks sound."
 msgstr "• Igri manjka zvok."
 
-#: ../src/gva-columns.c:806
+#: ../src/gva-columns.c:809
 msgid "• Screen flipping in cocktail mode is not supported."
 msgstr "• Obračanje zaslona v cocktail načinu ni podprto."
 
-#: ../src/gva-columns.c:815
+#: ../src/gva-columns.c:818
 msgid "• <b>THIS GAME DOESN'T WORK.</b>"
 msgstr "• <b>TA IGRA NE DELUJE.</b>"
 
-#: ../src/gva-columns.c:825
+#: ../src/gva-columns.c:828
 msgid "• The game has protection which isn't fully emulated."
 msgstr "• Igra ima zaščito, ki ni polno posnemana."
 
-#: ../src/gva-columns.c:861
+#: ../src/gva-columns.c:864
 msgid "Click here to remove from favorites"
 msgstr "Kliknite sem za odstranitev iz priljubljenih "
 
-#: ../src/gva-columns.c:863
+#: ../src/gva-columns.c:866
 msgid "Click here to add to favorites"
 msgstr "Kliknite sem za dodajanje k priljubljenim "
 
-#: ../src/gva-columns.c:955
+#: ../src/gva-columns.c:958
 #: ../src/gva-properties.c:410
 msgid "(Game Description Unknown)"
 msgstr "(Neznan opis igre)"
 
-#: ../src/gva-columns.c:958
+#: ../src/gva-columns.c:961
 #: ../src/gva-properties.c:413
 msgid "(Manufacturer Unknown)"
 msgstr "(Neznan proizvajalec)"
 
-#: ../src/gva-columns.c:961
+#: ../src/gva-columns.c:964
 #: ../src/gva-properties.c:416
 msgid "(Year Unknown)"
 msgstr "(Neznano leto)"
 
-#: ../src/gva-columns.c:985
+#: ../src/gva-columns.c:988
 #: ../src/gva-main.c:1021
 msgid "ROM Name"
 msgstr "Ime ROMa"
 
-#: ../src/gva-columns.c:987
+#: ../src/gva-columns.c:990
 msgid "BIOS"
 msgstr "BIOS"
 
-#: ../src/gva-columns.c:989
+#: ../src/gva-columns.c:992
 #: ../src/gva-main.c:1014
 msgid "Category"
 msgstr "Kategorija"
 
-#: ../src/gva-columns.c:991
+#: ../src/gva-columns.c:994
 msgid "Favorite"
 msgstr "Priljubljene"
 
-#: ../src/gva-columns.c:994
+#: ../src/gva-columns.c:997
 msgid "Driver"
 msgstr "Gonilnik"
 
-#: ../src/gva-columns.c:1002
+#: ../src/gva-columns.c:1005
 msgid "Samples"
 msgstr "Vzorci"
 
-#: ../src/gva-columns.c:1004
+#: ../src/gva-columns.c:1007
 msgid "Title"
 msgstr "Naslov"
 
-#: ../src/gva-columns.c:1007
+#: ../src/gva-columns.c:1010
 msgid "Year"
 msgstr "Leto"
 
-#: ../src/gva-columns.c:1010
+#: ../src/gva-columns.c:1013
 #: ../src/gva-main.c:1000
 msgid "Manufacturer"
 msgstr "Proizvajalec"
 
-#: ../src/gva-columns.c:1016
+#: ../src/gva-columns.c:1019
 msgid "Players"
 msgstr "Igralci"
 
-#: ../src/gva-columns.c:1019
+#: ../src/gva-columns.c:1022
 msgid "Players (Alt.)"
 msgstr "Igralci (izmenjujoče)"
 
-#: ../src/gva-columns.c:1022
+#: ../src/gva-columns.c:1025
 msgid "Players (Sim.)"
 msgstr "Igralci (sočasno)"
 
-#: ../src/gva-columns.c:1027
+#: ../src/gva-columns.c:1030
 msgid "Status"
 msgstr "Stanje"
 
-#: ../src/gva-columns.c:1038
+#: ../src/gva-columns.c:1041
 msgid "Last Played"
 msgstr "Nazadnje igrano"
 
-#: ../src/gva-columns.c:1040
+#: ../src/gva-columns.c:1043
 msgid "Comment"
 msgstr "Opomba"
 
-#: ../src/gva-columns.c:1044
+#: ../src/gva-columns.c:1047
 msgid "Played On"
 msgstr "Igrano ob"
 
@@ -418,11 +602,11 @@ msgstr "Program ni nastavljen za prikaz podrobnosti zgodovine."
 msgid "Invalid or unsupported INP file format"
 msgstr "Neveljaven ali nepodprt zapis datoteke INP"
 
-#: ../src/gva-main.c:235
+#: ../src/gva-main.c:242
 msgid "Building game database..."
 msgstr "Izgradnja podatkovne zbirke iger ..."
 
-#: ../src/gva-main.c:296
+#: ../src/gva-main.c:303
 msgid "Analyzing ROM files..."
 msgstr "Preučevanje datotek ROM ..."
 
@@ -471,7 +655,7 @@ msgstr "Glasbe ni mogoče predvajati"
 msgid "Buffering %d%%..."
 msgstr "Polnjenje medpomnilnika %d%% ..."
 
-#: ../src/gva-music-button.c:265
+#: ../src/gva-music-button.c:262
 msgid "Connecting..."
 msgstr "Povezovanje ..."
 
@@ -855,11 +1039,11 @@ msgstr "ROM datotek ni mogoče najti"
 msgid "GNOME Video Arcade was unable to locate any ROM files. It could be that MAME is misconfigured or that no ROM files are installed. Click <b>Help</b> for more details and troubleshooting tips."
 msgstr "ROM datotek ni mogoče najti. Verjetno je začelje MAME napačno nastavljeno ali pa datoteke ROM niso nameščene. Za več podrobnosti in namige odpravljanja napak kliknite <b>Pomoč</b>."
 
-#: ../src/main.c:199
+#: ../src/main.c:196
 msgid "Changes detected in ROM files"
 msgstr "V datotekah ROM so bile zaznane spremembe"
 
-#: ../src/main.c:203
+#: ../src/main.c:200
 msgid ""
 "GNOME Video Arcade has detected changes in your ROM files and will need to audit them in order to update the game list. However the audit may take several minutes to complete. Would you like to perform the audit now?\n"
 "\n"
@@ -869,11 +1053,16 @@ msgstr ""
 "\n"
 "V primeru, da sedaj preučevanje preskočite, bo samodejno izvedeno ob naslednjemu zagonu programa. "
 
-#: ../src/main.c:213
+#: ../src/main.c:210
 msgid "_Skip Audit"
 msgstr "P_reskoči preučevanje"
 
-#: ../src/main.c:214
+#: ../src/main.c:211
 msgid "_Audit ROM Files"
 msgstr "_Preuči datoteke ROM"
+
+#~ msgid "GConf error: %s"
+#~ msgstr "Napaka GConf: %s"
+#~ msgid "All further errors shown only on terminal."
+#~ msgstr "Vse nadaljnje napake bodo prikazane le v terminalu."
 
